fixing overflow

--- a/playground/sass/flashcards/flashcards.scss
+++ b/playground/sass/flashcards/flashcards.scss
@@ -76,7 +76,11 @@
 }
 
 .card-list {
-
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  gap: 20px;
+  padding: 24px;
   .card {
     .info {
       .answer {
